crates/test-files/fixtures/compile_errors/missing_self.fe
contract Foo {
    fn pure_fn() {
        self.mut_fn()
    }

    fn mut_fn(self) {}
}

struct Bar {
    x: u8

    fn f() -> u8 {
        return self.x
    }
}
